--- a/web/public/assets/css/default.css
+++ b/web/public/assets/css/default.css
@@ -10,6 +10,11 @@
     outline: none;
 }
 
+svg{
+    margin: 0;
+    padding: 0;
+}
+
 html{
     width: 100vw;
     height: 100vh;
@@ -20,6 +25,8 @@ html{
 body{
     width: 100%;
     height: 100%;
+
+    background-color: #f1f1f1;
 }
 
 .card{
@@ -37,4 +44,9 @@ body{
     text-align: center;
     font-weight: 900;
     font-size: 20px;
+}
+
+.card_text{
+    font-weight: 500;
+    font-size: 13px;
 }
