--- a/web/public/assets/css/index.css
+++ b/web/public/assets/css/index.css
@@ -2,20 +2,61 @@
     width: 100%;
     max-width: 1280px;
     height: 100%;
-    max-height: 100%;
-    background-color: #f1f1f1;
     margin: 0 auto;
     padding: 5px 10px;
 
+    overflow: auto;
+
     display: flex;
     flex-direction: column;
-    
-    overflow: auto;
 }
 /* HEADER */
 .header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
     margin-bottom: 5px;
 }
+.header__title{
+    font-weight: 900;
+    font-size: 20px;
+}
+
+.header__menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    list-style-type:none;
+}
+.header__menu__element{
+    color: #313131;
+    font-size: 16px;
+    text-decoration: none;
+    
+    width: max-content;
+    height: max-content;
+
+    transition: 0.2s;
+    border-left: 1px dashed #313131;
+    padding: 1px 20px;
+}
+
+.header__menu__element:hover {
+    text-decoration: none;
+    border-top: 1px dashed #313131;
+    border-bottom: 1px dashed #313131;
+    padding: 0px 20px;
+}
+
+.header__menu__element:hover:last-child {
+    border-right: 1px dashed #313131;
+    padding: 0px 20px;
+}
+
 /* CONTENT */
 .content{
     flex: 1;
@@ -43,6 +84,16 @@
     margin-bottom: 0;
 }
 
+.group{
+    width: 100%;
+}
+
+.group--flex{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .input_title{
     color: #313131;
 }
@@ -54,6 +105,12 @@
 
     transition: 0.2s;
 }
+
+.input_number{
+    border: 1px dashed #313131;
+    transition: 0.2s;
+}
+
 .input_text::placeholder{
     color: #999;
 }
@@ -64,7 +121,41 @@
     outline: 3px solid #3131314f;
     border-style:solid;
 }
+/* INPUT */
+input[type=range]{
+    -webkit-appearance: none;
+}
 
+input[type=range]::-webkit-slider-runnable-track {
+    margin-top: 5px;
+    height: 3px;
+    background: #ddd;
+    border: none;
+    border-radius: 0;
+}
+
+input[type=range]:disabled::-webkit-slider-thumb {
+    background-color: #BABECC;
+    cursor:not-allowed;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 10px;
+    width: 10px;
+    border-radius: 0;
+    background: #313131;
+    margin-top: -4px;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ccc;
+}
 /* C RIGHT */
 .content_right{
     flex: 1;
@@ -80,20 +171,49 @@
 .block:last-child{
     margin-bottom: 0;
 }
-
+.block--flex{
+    display: flex;
+    flex-direction: row;
+}
+.block_l{
+    width: calc(60% - 5px);
+    margin-right: 5px;
+}
 .result{
     border: 1px dashed #313131;
     overflow: auto;
-    flex: 1;
-
-    overflow: auto;
 }
 
-.result canvas{
+.block_r{
+    width: calc(40% - 5px);
+    margin-left: 5px;
+}
+
+.result__menu{
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+}
+
+.result > svg{
+    width: 100%;
+    height: 100%;
 }
 /* FOOTER */
 .footer{
     height: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color:#888;
+}
+.link{
+    color: #313131;
+    text-decoration: none;
+}
+.link:hover{
+    text-decoration: underline;
 }
 
 /* MEDIA */
@@ -104,5 +224,48 @@
     }
     .content_left, .content_left{
         width: auto;
+    }
+}
+
+@media (max-width: 500px) {
+    .header{
+        display: flex;
+        flex-direction: column;
+    }
+    .header__menu{
+        display: none;
+    }
+    .header:hover .header__menu{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    .header:hover .header__title{
+            margin-bottom: 10px;
+    }
+    .header__menu__element {
+        padding: 5px 20px;
+        border: none;
+    }
+    .header__menu__element:hover {
+        border-top: 1px dashed #313131;
+        border-bottom: 1px dashed #313131;
+    }
+    .header__menu__element:hover:last-child{
+        border-right: none;
+    }
+
+    .block--flex{
+        flex-direction: column;
+    }
+    .block_l{
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+    .block_r{
+        width: 100%;
+        margin-left: 0;
     }
 }
