--- a/web/public/assets/css/index.css
+++ b/web/public/assets/css/index.css
@@ -125,8 +125,14 @@
 input[type=range]{
     -webkit-appearance: none;
 }
-
-input[type=range]::-webkit-slider-runnable-track, input[type=range]::-moz-range-track  {
+input[type=range]::-webkit-slider-runnable-track {
+    margin-top: 5px;
+    height: 3px;
+    background: #ddd;
+    border: none;
+    border-radius: 0;
+}
+input[type=range]::-moz-range-track{
     margin-top: 5px;
     height: 3px;
     background: #ddd;
@@ -134,12 +140,25 @@ input[type=range]::-webkit-slider-runnable-track, input[type=range]::-moz-range-
     border-radius: 0;
 }
 
-input[type=range]:disabled::-webkit-slider-thumb, input[type=range]:disabled::-moz-range-thumb {
+input[type=range]:disabled::-webkit-slider-thumb {
+    background-color: #BABECC;
+    cursor:not-allowed;
+}
+input[type=range]:disabled::-moz-range-thumb{
     background-color: #BABECC;
     cursor:not-allowed;
 }
 
-input[type=range]::-webkit-slider-thumb, input[type=range]::-moz-range-thumb {
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 10px;
+    width: 10px;
+    border-radius: 0;
+    background: #313131;
+    margin-top: -4px;
+}
+input[type=range]::-moz-range-thumb{
     -webkit-appearance: none;
     border: none;
     height: 10px;
