--- a/web/public/assets/css/default.css
+++ b/web/public/assets/css/default.css
@@ -46,6 +46,11 @@ body{
     font-size: 20px;
 }
 
+.card_subtitle{
+    font-weight: 900;
+    font-size: 15px;
+}
+
 .card_text{
     font-weight: 500;
     font-size: 13px;
