--- a/web/public/assets/css/index.css
+++ b/web/public/assets/css/index.css
@@ -94,6 +94,12 @@
     justify-content: space-between;
 }
 
+.input_line {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 .input_title{
     color: #313131;
 }
