--- a/web/public/assets/css/index.css
+++ b/web/public/assets/css/index.css
@@ -206,9 +206,21 @@ input[type=range]:focus::-webkit-slider-runnable-track {
     width: calc(60% - 5px);
     margin-right: 5px;
 }
+
 .result{
+    position: relative;
     border: 1px dashed #313131;
     overflow: auto;
+}
+
+.result__params{
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
 }
 
 .block_r{
@@ -226,6 +238,16 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 .result > svg{
     width: 100%;
     height: 100%;
+}
+
+.result--maximize{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+
+    background:rgba(255, 255, 255, .9);
 }
 /* FOOTER */
 .footer{
